--- a/UI/index.html
+++ b/UI/index.html
@@ -6,7 +6,7 @@
       <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
-    <table id="demo"></table>
+    <table id="demo">Loading holoports...</table>
     <script src="tablefilter/tablefilter.js"></script>
     <script src="js/index.js"></script>
   </body>
