test http connection and print report

--- a/connection-tester/index.html
+++ b/connection-tester/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div><a href="/">< Back</a></div>
-    <span class="test-button" onclick="startTest()">Start connection test</span>
+    <span id="test-button">Start connection test</span>
+    <div id="test-results"></div>
     <script src="/js/tester.js"></script>
   </body>
 </html>
