--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
       <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
-    <a href="/list/">List of Holoports</a>
+    <a href="./list/">List of Holoports</a>
     <p>
       Shows data reported by each Holoport via <em>netstatsd</em> service in form of a table with filters. Includes each holoport that reported it's status within last 24h and displays the most recent record. Under the hood queries collection <em>host_statistics.holoport_status</em>.
     </p>
     <p>
       &nbsp;
     </p>
-    <a href="/connection-tester/">Connectivity tester</a>
+    <a href="./connection-tester/">Connectivity tester</a>
     <p>
       Tool for testing connection from browser to Holoport via Holo Networks: browser -> router-gateway -> zerotier-layer -> holoport.
     </p>
