--- a/connection-tester/index.html
+++ b/connection-tester/index.html
@@ -3,12 +3,12 @@
   <head>
       <meta charset="utf-8">
       <title>Connection tester</title>
-      <link href="/css/main.css" rel="stylesheet">
+      <link href="../css/main.css" rel="stylesheet">
   </head>
   <body>
-    <div><a href="/">< Back</a></div>
+    <div><a href="../">< Back</a></div>
     <span id="test-button">Start connection test</span>
     <div id="test-results"></div>
-    <script src="/js/tester.js"></script>
+    <script src="../js/tester.js"></script>
   </body>
 </html>
