--- a/list/index.html
+++ b/list/index.html
@@ -3,13 +3,13 @@
   <head>
       <meta charset="utf-8">
       <title>Table of HoloPorts</title>
-      <link href="/css/main.css" rel="stylesheet">
+      <link href="../css/main.css" rel="stylesheet">
   </head>
   <body>
-    <div><a href="/">< Back</a></div>
+    <div><a href="../">< Back</a></div>
     <div id="loading">Loading holoports...</div>
     <table id="demo"></table>
-    <script src="/tablefilter/tablefilter.js"></script>
-    <script src="/js/list.js"></script>
+    <script src="../tablefilter/tablefilter.js"></script>
+    <script src="../js/list.js"></script>
   </body>
 </html>
