--- a/list/index.html
+++ b/list/index.html
@@ -8,7 +8,13 @@
   <body>
     <div><a href="/">< Back</a></div>
     <div id="loading">Loading holoports...</div>
-    <table id="demo"></table>
+    <div id="table-container">
+      <div id="modal">
+        <div id="modal-inner"></div>
+        <div id="modal-button" onClick="hide_modal()">Close</div>
+      </div>
+      <table id="demo"></table>
+    </div>
     <script src="/tablefilter/tablefilter.js"></script>
     <script src="/js/list.js"></script>
   </body>
